--- a/ng-solitaire-engine/src/app/gameboard/gameboard.scss
+++ b/ng-solitaire-engine/src/app/gameboard/gameboard.scss
@@ -2,3 +2,6 @@
     display: flex;
     flex-direction: row;
 }
+se-railroad {
+    margin-right: 2%;
+}
